--- a/outer/config-service/src/main/resources/application.yml
+++ b/outer/config-service/src/main/resources/application.yml
@@ -8,4 +8,7 @@ spring:
     config:
       server:
         git:
-          uri: file:\\D:\workspace\st-framework\outer\git-local-repo
+          uri: https://github.com/sohot8653/st-framework.git
+          username: sohot8653
+          password: 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
+          
