--- a/outer/apigateway-service/src/main/resources/application.yml
+++ b/outer/apigateway-service/src/main/resources/application.yml
@@ -48,6 +48,14 @@ spring:
             - RemoveRequestHeader=Cookie
             - RewritePath=/user-service/(?<segment>.*), /$\{segment}
             - AuthorizationHeaderFilter
+        - id: user-service
+          uri: lb://USER-SERVICE
+          predicates:
+            - Path=/user-service/actuator/**
+            - Method=GET, POST
+          filters:
+            - RemoveRequestHeader=Cookie
+            - RewritePath=/user-service/(?<segment>.*), /$\{segment}
         - id: catalog-service
           uri: lb://CATALOG-SERVICE
           predicates:
@@ -80,3 +88,9 @@ spring:
 
 token:
   secret: user_token
+  
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh, health, beans, httptrace
