--- a/inner/user-service/src/main/resources/application.yml
+++ b/inner/user-service/src/main/resources/application.yml
@@ -23,6 +23,7 @@ spring:
 
 eureka:
   instance:
+    hostname: localhost
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
   client:
     register-with-eureka: true
