--- a/inner/user-service/pom.xml
+++ b/inner/user-service/pom.xml
@@ -52,7 +52,7 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>1.3.176</version>
+            <version>1.3.176</version><!--$NO-MVN-MAN-VER$-->
             <scope>runtime</scope>
         </dependency>
 
@@ -69,7 +69,6 @@
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-commons</artifactId>
-            <version>2.4.3</version>
             <scope>compile</scope>
         </dependency>
 
@@ -141,6 +140,11 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <dependency>
+				<groupId>org.projectlombok</groupId>
+				<artifactId>lombok</artifactId>
+				<version>1.18.30</version>
+		    </dependency>
         </dependencies>
     </dependencyManagement>
 
