--- a/inner/order-service/src/main/resources/application.yml
+++ b/inner/order-service/src/main/resources/application.yml
@@ -20,12 +20,12 @@ spring:
     hibernate:
       ddl-auto: create-drop
   datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:testdb
-#    url: jdbc:mariadb://localhost:3306/mydb
-#    driver-class-name: org.mariadb.jdbc.Driver
-#    username: root
-#    password: rhaudqls123!
+#    driver-class-name: org.h2.Driver
+#    url: jdbc:h2:mem:testdb
+    url: jdbc:mariadb://localhost:3306/mydb
+    driver-class-name: org.mariadb.jdbc.Driver
+    username: root
+    password: rhaudqls123!
 
 eureka:
   instance:
